src/sokol/app.nim


type GlSwapchain* = object
  framebuffer*:uint32

type Swapchain* = object
  width*:int32
  height*:int32
  sampleCount*:int32
  colorFormat*:PixelFormat
  depthFormat*:PixelFormat
  metal*:MetalSwapchain
  d3d11*:D3d11Swapchain
  wgpu*:WgpuSwapchain
  vulkan*:VulkanSwapchain
  gl*:GlSwapchain

type Logger* = object
  fn*:proc(a1:cstring, a2:uint32, a3:uint32, a4:cstring, a5:uint32, a6:cstring, a7:pointer) {.cdecl.}
  userData*:pointer

type GlDesc* = object
  majorVersion*:int32
  minorVersion*:int32

type Win32Desc* = object
  consoleUtf8*:bool
  consoleCreate*:bool
  consoleAttach*:bool

type Html5Desc* = object
  canvasSelector*:cstring
  canvasResize*:bool
  preserveDrawingBuffer*:bool
  premultipliedAlpha*:bool
  askLeaveSite*:bool
  updateDocumentTitle*:bool
  bubbleMouseEvents*:bool
  bubbleTouchEvents*:bool
  bubbleWheelEvents*:bool
  bubbleKeyEvents*:bool
  bubbleCharEvents*:bool
  useEmscSetMainLoop*:bool
  emscSetMainLoopSimulateInfiniteLoop*:bool

type IosDesc* = object
  keyboardResizesCanvas*:bool

type Desc* = object
  initCb*:proc() {.cdecl.}
  frameCb*:proc() {.cdecl.}
  cleanupCb*:proc() {.cdecl.}
  eventCb*:proc(a1:ptr Event) {.cdecl.}
  userData*:pointer
  initUserdataCb*:proc(a1:pointer) {.cdecl.}
  frameUserdataCb*:proc(a1:pointer) {.cdecl.}
  cleanupUserdataCb*:proc(a1:pointer) {.cdecl.}
  eventUserdataCb*:proc(a1:ptr Event, a2:pointer) {.cdecl.}
  width*:int32
  height*:int32
  sampleCount*:int32
  swapInterval*:int32
  highDpi*:bool
  fullscreen*:bool
  alpha*:bool
  windowTitle*:cstring
  enableClipboard*:bool
  clipboardSize*:int32
  enableDragndrop*:bool
  maxDroppedFiles*:int32
  maxDroppedFilePathLength*:int32
  icon*:IconDesc
  allocator*:Allocator
  logger*:Logger
  gl*:GlDesc
  win32*:Win32Desc
  html5*:Html5Desc
  ios*:IosDesc

type
  Html5FetchError* {.size:sizeof(int32).} = enum
    html5FetchErrorNoError,
    html5FetchErrorBufferTooSmall,
    html5FetchErrorOther,

type Html5FetchResponse* = object
  succeeded*:bool
  errorCode*:Html5FetchError
  fileIndex*:int32
  data*:Range
  buffer*:Range
  userData*:pointer

type Html5FetchRequest* = object
  droppedFileIndex*:int32
  callback*:proc(a1:ptr Html5FetchResponse) {.cdecl.}
  buffer*:Range
  userData*:pointer

type
  MouseCursor* {.size:sizeof(int32).} = enum
    mousecursorDefault = 0,
    mousecursorArrow = 1,
    mousecursorIbeam = 2,
    mousecursorCrosshair = 3,
    mousecursorPointingHand = 4,
    mousecursorResizeEw = 5,
    mousecursorResizeNs = 6,
    mousecursorResizeNwse = 7,
    mousecursorResizeNesw = 8,
    mousecursorResizeAll = 9,
    mousecursorNotAllowed = 10,
    mousecursorCustom0 = 11,
    mousecursorCustom1 = 12,
    mousecursorCustom2 = 13,
    mousecursorCustom3 = 14,
    mousecursorCustom4 = 15,
    mousecursorCustom5 = 16,
    mousecursorCustom6 = 17,
    mousecursorCustom7 = 18,
    mousecursorCustom8 = 19,
    mousecursorCustom9 = 20,
    mousecursorCustom10 = 21,
    mousecursorCustom11 = 22,
    mousecursorCustom12 = 23,
    mousecursorCustom13 = 24,
    mousecursorCustom14 = 25,
    mousecursorCustom15 = 26,

proc c_isvalid():bool {.cdecl, importc:"sapp_isvalid".}
proc isvalid*():bool =
    c_isvalid()

proc c_width():int32 {.cdecl, importc:"sapp_width".}
proc width*():int32 =
    c_width()

proc c_widthf():float32 {.cdecl, importc:"sapp_widthf".}
proc widthf*():float32 =
    c_widthf()

proc c_height():int32 {.cdecl, importc:"sapp_height".}
proc height*():int32 =
    c_height()

proc c_heightf():float32 {.cdecl, importc:"sapp_heightf".}
proc heightf*():float32 =
    c_heightf()

proc c_colorFormat():PixelFormat {.cdecl, importc:"sapp_color_format".}
proc colorFormat*():PixelFormat =
    c_colorFormat()

proc c_depthFormat():PixelFormat {.cdecl, importc:"sapp_depth_format".}
proc depthFormat*():PixelFormat =
    c_depthFormat()

proc c_sampleCount():int32 {.cdecl, importc:"sapp_sample_count".}
proc sampleCount*():int32 =
    c_sampleCount()

proc c_highDpi():bool {.cdecl, importc:"sapp_high_dpi".}
proc highDpi*():bool =
    c_highDpi()

proc c_dpiScale():float32 {.cdecl, importc:"sapp_dpi_scale".}
proc dpiScale*():float32 =
    c_dpiScale()

proc c_showKeyboard(show:bool):void {.cdecl, importc:"sapp_show_keyboard".}
proc showKeyboard*(show:bool):void =
    c_showKeyboard(show)

proc c_keyboardShown():bool {.cdecl, importc:"sapp_keyboard_shown".}
proc keyboardShown*():bool =
    c_keyboardShown()

proc c_isFullscreen():bool {.cdecl, importc:"sapp_is_fullscreen".}
proc isFullscreen*():bool =
    c_isFullscreen()

proc c_toggleFullscreen():void {.cdecl, importc:"sapp_toggle_fullscreen".}
proc toggleFullscreen*():void =
    c_toggleFullscreen()

proc c_showMouse(show:bool):void {.cdecl, importc:"sapp_show_mouse".}
proc showMouse*(show:bool):void =
    c_showMouse(show)

proc c_mouseShown():bool {.cdecl, importc:"sapp_mouse_shown".}
proc mouseShown*():bool =
    c_mouseShown()

proc c_lockMouse(lock:bool):void {.cdecl, importc:"sapp_lock_mouse".}
proc lockMouse*(lock:bool):void =
    c_lockMouse(lock)

proc c_mouseLocked():bool {.cdecl, importc:"sapp_mouse_locked".}
proc mouseLocked*():bool =
    c_mouseLocked()

proc c_setMouseCursor(cursor:MouseCursor):void {.cdecl, importc:"sapp_set_mouse_cursor".}
proc setMouseCursor*(cursor:MouseCursor):void =
    c_setMouseCursor(cursor)

proc c_getMouseCursor():MouseCursor {.cdecl, importc:"sapp_get_mouse_cursor".}
proc getMouseCursor*():MouseCursor =
    c_getMouseCursor()

proc c_bindMouseCursorImage(cursor:MouseCursor, desc:ptr ImageDesc):MouseCursor {.cdecl, importc:"sapp_bind_mouse_cursor_image".}
proc bindMouseCursorImage*(cursor:MouseCursor, desc:ImageDesc):MouseCursor =
    c_bindMouseCursorImage(cursor, addr(desc))

proc c_unbindMouseCursorImage(cursor:MouseCursor):void {.cdecl, importc:"sapp_unbind_mouse_cursor_image".}
proc unbindMouseCursorImage*(cursor:MouseCursor):void =
    c_unbindMouseCursorImage(cursor)

proc c_userdata():pointer {.cdecl, importc:"sapp_userdata".}
proc userdata*():pointer =
    c_userdata()

proc c_queryDesc():Desc {.cdecl, importc:"sapp_query_desc".}
proc queryDesc*():Desc =
    c_queryDesc()

proc c_requestQuit():void {.cdecl, importc:"sapp_request_quit".}
proc requestQuit*():void =
    c_requestQuit()

proc c_cancelQuit():void {.cdecl, importc:"sapp_cancel_quit".}
proc cancelQuit*():void =
    c_cancelQuit()

proc c_quit():void {.cdecl, importc:"sapp_quit".}
proc quit*():void =
    c_quit()

proc c_consumeEvent():void {.cdecl, importc:"sapp_consume_event".}
proc consumeEvent*():void =
    c_consumeEvent()

proc c_frameCount():uint64 {.cdecl, importc:"sapp_frame_count".}
proc frameCount*():uint64 =
    c_frameCount()

proc c_frameDuration():float64 {.cdecl, importc:"sapp_frame_duration".}
proc frameDuration*():float64 =
    c_frameDuration()

proc c_setClipboardString(str:cstring):void {.cdecl, importc:"sapp_set_clipboard_string".}
proc setClipboardString*(str:cstring):void =
    c_setClipboardString(str)

proc c_getClipboardString():cstring {.cdecl, importc:"sapp_get_clipboard_string".}
proc getClipboardString*():cstring =
    c_getClipboardString()

proc c_setWindowTitle(str:cstring):void {.cdecl, importc:"sapp_set_window_title".}
proc setWindowTitle*(str:cstring):void =
    c_setWindowTitle(str)

proc c_setIcon(iconDesc:ptr IconDesc):void {.cdecl, importc:"sapp_set_icon".}
proc setIcon*(iconDesc:IconDesc):void =
    c_setIcon(addr(icon_desc))

proc c_getNumDroppedFiles():int32 {.cdecl, importc:"sapp_get_num_dropped_files".}
proc getNumDroppedFiles*():int32 =
    c_getNumDroppedFiles()

proc c_getDroppedFilePath(index:int32):cstring {.cdecl, importc:"sapp_get_dropped_file_path".}
proc getDroppedFilePath*(index:int32):cstring =
    c_getDroppedFilePath(index)

proc c_run(desc:ptr Desc):void {.cdecl, importc:"sapp_run".}
proc run*(desc:Desc):void =
    c_run(addr(desc))

proc c_getEnvironment():Environment {.cdecl, importc:"sapp_get_environment".}
proc getEnvironment*():Environment =
    c_getEnvironment()

proc c_getSwapchain():Swapchain {.cdecl, importc:"sapp_get_swapchain".}
proc getSwapchain*():Swapchain =
    c_getSwapchain()

proc c_eglGetDisplay():pointer {.cdecl, importc:"sapp_egl_get_display".}
proc eglGetDisplay*():pointer =
    c_eglGetDisplay()

proc c_eglGetContext():pointer {.cdecl, importc:"sapp_egl_get_context".}
proc eglGetContext*():pointer =
    c_eglGetContext()

proc c_html5AskLeaveSite(ask:bool):void {.cdecl, importc:"sapp_html5_ask_leave_site".}
proc html5AskLeaveSite*(ask:bool):void =
    c_html5AskLeaveSite(ask)

proc c_html5GetDroppedFileSize(index:int32):uint32 {.cdecl, importc:"sapp_html5_get_dropped_file_size".}
proc html5GetDroppedFileSize*(index:int32):uint32 =
    c_html5GetDroppedFileSize(index)

proc c_html5FetchDroppedFile(request:ptr Html5FetchRequest):void {.cdecl, importc:"sapp_html5_fetch_dropped_file".}
proc html5FetchDroppedFile*(request:Html5FetchRequest):void =
    c_html5FetchDroppedFile(addr(request))

proc c_macosGetWindow():pointer {.cdecl, importc:"sapp_macos_get_window".}
proc macosGetWindow*():pointer =
    c_macosGetWindow()

proc c_iosGetWindow():pointer {.cdecl, importc:"sapp_ios_get_window".}
proc iosGetWindow*():pointer =
    c_iosGetWindow()

proc c_d3d11GetSwapChain():pointer {.cdecl, importc:"sapp_d3d11_get_swap_chain".}
proc d3d11GetSwapChain*():pointer =
    c_d3d11GetSwapChain()

proc c_win32GetHwnd():pointer {.cdecl, importc:"sapp_win32_get_hwnd".}
proc win32GetHwnd*():pointer =
    c_win32GetHwnd()

proc c_glGetMajorVersion():int32 {.cdecl, importc:"sapp_gl_get_major_version".}
proc glGetMajorVersion*():int32 =
    c_glGetMajorVersion()

proc c_glGetMinorVersion():int32 {.cdecl, importc:"sapp_gl_get_minor_version".}
proc glGetMinorVersion*():int32 =
    c_glGetMinorVersion()

proc c_glIsGles():bool {.cdecl, importc:"sapp_gl_is_gles".}
proc glIsGles*():bool =
    c_glIsGles()

proc c_x11GetWindow():pointer {.cdecl, importc:"sapp_x11_get_window".}
proc x11GetWindow*():pointer =
    c_x11GetWindow()

proc c_x11GetDisplay():pointer {.cdecl, importc:"sapp_x11_get_display".}
proc x11GetDisplay*():pointer =
    c_x11GetDisplay()

proc c_androidGetNativeActivity():pointer {.cdecl, importc:"sapp_android_get_native_activity".}
proc androidGetNativeActivity*():pointer =
    c_androidGetNativeActivity()

when defined emscripten:
  {.passl:"-lGL -ldl".}
  {.passc:"-DSOKOL_GLES3".}
  {.passL: "-s MIN_WEBGL_VERSION=2 -s MAX_WEBGL_VERSION=2".}
elif defined windows:
  when not defined vcc:
    {.passl:"-lkernel32 -luser32 -lshell32 -lgdi32".}
  when defined gl:
    {.passc:"-DSOKOL_GLCORE".}
  else:
    {.passc:"-DSOKOL_D3D11".}
    when not defined vcc:
      {.passl:"-ld3d11 -ldxgi".}
elif defined macosx:
  {.passc:"-x objective-c".}
  {.passl:"-framework Cocoa -framework QuartzCore".}
  when defined gl:
    {.passc:"-DSOKOL_GLCORE".}
    {.passl:"-framework OpenGL".}
  else:
    {.passc:"-DSOKOL_METAL".}
    {.passl:"-framework Metal -framework MetalKit".}
elif defined linux:
  {.passc:"-DSOKOL_GLCORE".}
  {.passl:"-lX11 -lXi -lXcursor -lGL -lm -ldl -lpthread".}
else:
  error("unsupported platform")

{.passc:"-DSOKOL_NIM_IMPL".}
when defined(release):
  {.passc:"-DNDEBUG".}
{.compile:"c/sokol_app.c".}
